load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "middleware",
    srcs = [
        "context.go",
        "logging.go",
        "recovery.go",
    ],
    importpath = "github.com/00security/profefe/pkg/middleware",
    visibility = ["//visibility:public"],
    deps = ["//pkg/log"],
)
