load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "perftools_profiles_proto",
    srcs = ["profile.proto"],
    visibility = ["//:__subpackages__"],
)

go_proto_library(
    name = "perftools_profiles_go_proto",
    importpath = "github.com/00security/profefe/internal/pprof/proto",
    proto = ":perftools_profiles_proto",
    visibility = ["//:__subpackages__"],
)

go_library(
    name = "proto",
    embed = [":perftools_profiles_go_proto"],
    importpath = "github.com/00security/profefe/internal/pprof/proto",
    visibility = ["//:__subpackages__"],
)
