load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "clickhouse",
    srcs = [
        "clickhouse.go",
        "model.go",
        "reader.go",
        "sample.go",
        "storage.go",
        "writer.go",
    ],
    importpath = "github.com/00security/profefe/pkg/storage/clickhouse",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/pprof/profile",
        "//pkg/log",
        "//pkg/pprofutil",
        "//pkg/profile",
        "//pkg/storage",
        "@com_github_cespare_xxhash_v2//:xxhash",
        "@com_github_clickhouse_clickhouse_go//:clickhouse-go",
        "@com_github_rs_xid//:xid",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "clickhouse_test",
    srcs = ["storage_integration_test.go"],
    deps = [
        "//pkg/log",
        "//pkg/storage/clickhouse",
        "//pkg/storage/storagetest",
        "@com_github_clickhouse_clickhouse_go//:clickhouse-go",
        "@com_github_stretchr_testify//require",
        "@com_github_stretchr_testify//suite",
        "@org_uber_go_zap//zapcore",
        "@org_uber_go_zap//zaptest",
    ],
)
