load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "s3",
    srcs = [
        "s3.go",
        "storage.go",
    ],
    importpath = "github.com/00security/profefe/pkg/storage/s3",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/log",
        "//pkg/profile",
        "//pkg/storage",
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_aws_aws_sdk_go_v2_feature_s3_manager//:manager",
        "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
        "@com_github_rs_xid//:xid",
        "@org_uber_go_zap//:zap",
    ],
)
